# 100-days-of-code

./: pyproject.toml  test
Day 01/: day1-class.py  day1-project.py
Day 02/: day2-class.py  day2-project.py
Day 03/: day3-project.py
Day 04/: day4-class.py
Day 06/: day6-class.py
Day 07/: day7-project.py
Day 09/: day9-class.py  day9-project.py
Day 10/: day10-project.py  functions.py
Day 11/: functions.py  main.py
Day 12/: functions.py  main.py
Day 13/: class.py
Day 14/: art.py  data.py  main.py
Day 15/: data.py  main.py  simple-main.py
Day 3/: day3-class.py
Day 4/: day4-project.py
Day 5/: day5-class.py  day5-project.py
Day 6/: day6-project.py
Day 7/: day7-project.py
Day 8/: day8-project.py
